<resources>
    <string name="app_name">Cine+</string>

    <string name="title_home">Início</string>
    <string name="title_movies">Filmes</string>
    <string name="title_theaters">Cinemas</string>
    <string name="title_tickets">Ingressos</string>
    <string name="title_upcoming_movies">Próximos lançamentos</string>
    <string name="title_tab_now_playing">Em cartaz</string>
    <string name="title_tab_upcoming">Próximos lançamentos</string>
    <string name="title_about">Sobre</string>
    <string name="title_cinemas">Cinemas</string>
    <string name="title_movie">Filme</string>
    <string name="title_cinema">Cinema</string>
    <string name="title_settings">Configurações</string>

    <!-- Home Strings -->
    <string name="home_header_playing">Em cartaz</string>
    <string name="home_header_upcoming">Próximos lançamentos</string>

    <string name="show_all">Mostrar tudo</string>

    <!-- Movie Strings -->
    <string name="original_title">%s (título original)</string>
    <string name="release_with_runtime">%1$s  •  %2$d min</string>
    <string name="runtime_only">%d min</string>
    <string name="unavailable_synopsis">Indisponível</string>
    <string name="trailer">Trailer</string>

    <string name="label_direction">Direção</string>
    <string name="label_production">Produção</string>
    <string name="label_executive_production">Produção executiva</string>
    <string name="label_screenplay">Roteiro</string>
    <string name="label_cast">Elenco</string>
    <string name="label_genres">Gêneros</string>

    <!-- Cinema Strings -->
    <string name="all">Todos</string>
    <string name="header_sessions">Sessões</string>
    <string name="header_playing_rooms">Salas em exibição</string>
    <string name="label_cinema" translatable="false">%1$s - %2$s</string>
    <string name="label_cinema_info">Informações</string>
    <string name="label_cinema_location">Localização</string>
    <string name="label_cinema_tickets">Ingressos</string>
    <string name="label_cinema_change">Alterar cinema</string>
    <string name="view_schedule_on_website">Ver programação no site</string>

    <!-- Tickets Strings -->
    <string name="text_buy_tickets">Comprar ingressos on-line</string>
    <string name="ticket_header_normal_rooms">Salas convencionais</string>
    <string name="ticket_header_magic_d">Salas Magic D - Poltronas convencionais</string>
    <string name="ticket_header_magic_d_vip">Salas Magic D - Poltronas VIP</string>
    <string name="tickets_value">R$ %1$s / %2$s (Inteira / Meia)</string>
    <string name="tickets_drive_in_until">Carros com até %d pessoas</string>
    <string name="tickets_drive_in_min_and_max">Carros com %1$d à %2$d pessoas</string>
    <string name="tickets_drive_in_value">R$ %s</string>

    <!-- Session Strings -->
    <string name="today">Hoje</string>
    <string name="today_with_date">Hoje, %s</string>
    <string name="tomorrow">Amanhã</string>
    <string name="tomorrow_with_date">Amanhã, %s</string>
    <string name="magic">MAGIC D</string>
    <string name="vip">VIP</string>
    <string name="_3d">3D</string>
    <string name="label_session_national">NAC</string>
    <string name="label_session_dubbed">DUB</string>
    <string name="label_session_subtitled">LEG</string>
    <string name="label_session_room">SALA %d</string>

    <!-- About Strings -->
    <string name="about_app_0">Este aplicativo foi desenvolvido para servir como uma alternativa ao site mobile do Cinemais.</string>
    <string name="about_app_1">Todos os dados são retirados diretamente das páginas oficiais.</string>
    <string name="about_app_2"><![CDATA[
    Desenvolvido por <a href="https://github.com/dsbezerra">Diego Bezerra</a>
    ]]></string>
    <string name="about_app_3"><![CDATA[
    O código-fonte pode ser encontrado no <a href="https://github.com/dsbezerra/cinemais-android">GitHub</a>
    ]]></string>

    <!-- Notification Strings -->
    <string name="notification_channel_premiere">Estreias da semana</string>
    <string name="notification_action_movie_details">Detalhes</string>
    <string name="cinemais_prefixed_name">Cinemais %s</string>
    <plurals name="notification_title_premieres">
        <item quantity="one">Estreia da semana</item>
        <item quantity="other">Estreias da semana</item>
    </plurals>

    <!-- Transition Strings -->
    <string name="transition_cinema_to_schedule" translatable="false">transition_cinema_to_schedule</string>

    <!-- Preference Titles -->
    <string name="appearance_header">Aparência</string>

    <!-- Appearance Preferences -->
    <string name="pref_dark_theme">Tema escuro</string>

    <!-- Error Strings -->
    <string name="error_title_no_connection">Sem conexão</string>
    <string name="error_message_no_connection">Não foi possível processar a requisição. Verifique se sua rede tem acesso à Internet e tente novamente.</string>
    <string name="error_title_network">Erro de rede</string>
    <string name="error_message_network">Não foi possível processar a requisição. Por favor tente novamente mais tarde.</string>
    <string name="error_title_unknown">Oops…</string>
    <string name="error_message_unknown">Ocorreu um erro inesperado durante a requisição.\nPor favor tente novamente mais tarde.</string>
    <string name="error_title_timeout">Tempo de requisição esgotado</string>
    <string name="error_message_timeout">Por favor verifique se sua rede possui acesso à Internet ou tente novamente mais tarde.</string>

    <!-- Empty Strings -->
    <string name="empty_message_movies">Nenhum filme encontrado</string>
    <string name="empty_message_schedule_filter">O filtro escolhido não possui sessões disponíveis :(</string>
    <string name="empty_message_schedule">Nenhuma sessão encontrada</string>

    <!-- Filter Strings -->
    <string name="filter_header_audio">Áudio</string>
    <string name="filter_audio_dub">Dublado</string>
    <string name="filter_audio_sub">Legendado</string>
    <string name="filter_audio_nac">Nacional</string>

    <string name="filter_header_video">Vídeo</string>
    <string name="filter_video_2d">2D</string>
    <string name="filter_video_3d">3D</string>

    <string name="filter_header_room">Sala</string>
    <string name="filter_room_magicd">Magic D</string>
    <string name="filter_room_vip">VIP</string>
</resources>
