<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieFragment"
    >

    <com.diegobezerra.cinemaisapp.widget.CinemaisSwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_medium"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:paddingBottom="@dimen/btn_session_rooms_height"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:id="@+id/backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_movie_appbar"
                        />

                    <include
                        layout="@layout/include_trailer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:visibility="gone"
                        />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="150dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/spacing_small"
                        >

                        <ImageView
                            android:id="@+id/poster"
                            android:layout_width="@dimen/movie_poster_width_detail"
                            android:layout_height="@dimen/movie_poster_height_detail"
                            android:layout_marginEnd="@dimen/spacing_medium"
                            android:layout_marginStart="@dimen/spacing_medium"
                            android:contentDescription="@null"
                            />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/spacing_medium"
                            android:layout_marginTop="@dimen/spacing_small"
                            >

                            <TextView
                                android:id="@+id/title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:textSize="24sp"
                                android:textStyle="normal"
                                android:maxLines="2"
                                android:textColor="?attr/subhead_text_color"
                                tools:text="Movie Title"
                                />

                            <TextView
                                android:id="@+id/originalTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/title"
                                android:layout_marginTop="@dimen/spacing_tiny"
                                android:textColor="?attr/secondary_text_color"
                                android:textSize="14sp"
                                tools:text="Movie Original Title (original title)"
                                />

                            <TextView
                                android:id="@+id/releaseRuntime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/originalTitle"
                                android:layout_marginTop="@dimen/spacing_small"
                                android:textColor="?attr/secondary_text_color"
                                android:textSize="12sp"
                                tools:text="9 de março  •  114 min"
                                />

                            <ImageView
                                android:id="@+id/ratingImage"
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_below="@+id/releaseRuntime"
                                android:layout_marginTop="@dimen/spacing_small"
                                android:contentDescription="@null"
                                tools:background="@drawable/ic_rating_l"
                                />

                        </RelativeLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/synopsis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/spacing_tiny"
                        android:padding="@dimen/spacing_medium"
                        android:textColor="?attr/secondary_text_color"
                        android:textIsSelectable="true"
                        android:textSize="14sp"
                        />

                    <com.diegobezerra.cinemaisapp.widget.MovieInfoView
                        android:id="@+id/genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:miLabel="@string/label_genres"
                        />

                    <com.diegobezerra.cinemaisapp.widget.MovieInfoView
                        android:id="@+id/cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:miLabel="@string/label_cast"
                        />

                    <com.diegobezerra.cinemaisapp.widget.MovieInfoView
                        android:id="@+id/screenplay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:miLabel="@string/label_screenplay"
                        />

                    <com.diegobezerra.cinemaisapp.widget.MovieInfoView
                        android:id="@+id/executiveProduction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:miLabel="@string/label_executive_production"
                        />

                    <com.diegobezerra.cinemaisapp.widget.MovieInfoView
                        android:id="@+id/production"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:miLabel="@string/label_production"
                        />

                    <com.diegobezerra.cinemaisapp.widget.MovieInfoView
                        android:id="@+id/direction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:miLabel="@string/label_direction"
                        />

                </LinearLayout>

            </FrameLayout>

        </androidx.core.widget.NestedScrollView>

    </com.diegobezerra.cinemaisapp.widget.CinemaisSwipeRefreshLayout>

    <include layout="@layout/include_movie_appbar"/>

    <fragment
        android:id="@+id/playing_cinemas_sheet"
        android:name="com.diegobezerra.cinemaisapp.ui.movie.playingcinemas.PlayingCinemasFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginBottom="4dp"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        tools:layout="@layout/fragment_playing_cinemas"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>