<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.diegobezerra.cinemaisapp.ui.cinema.CinemaViewModel"
            />

    </data>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:elevation="0dp"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:titleEnabled="false"
            >

            <include
                layout="@layout/include_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="top"
                app:layout_collapseMode="pin"
                />

            <LinearLayout
                android:id="@+id/cinema_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingTop="?actionBarSize"
                android:paddingEnd="@dimen/spacing_medium"
                android:paddingBottom="?actionBarSize"
                app:goneUnless="@{viewModel.isCinemaLayoutVisible}"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                >

                <TextView
                    android:id="@+id/cinema_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.cinema.name}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.Cinemais.Subhead"
                    android:textSize="20sp"
                    tools:text="Montes Claros"
                    />

                <TextView
                    android:id="@+id/cinema_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.cinema.location.addressLine}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.Cinemais.Body"
                    app:goneUnless="@{viewModel.cinema.location != null &amp;&amp; viewModel.cinema.location.hasAddressLine()}"
                    tools:text="Avenida Donato Quintino, 90\nCidade Nova - Montes Claros Shopping"
                    />

                <TextView
                    android:id="@+id/cinema_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:background="?selectableItemBackground"
                    android:gravity="center_horizontal"
                    android:onClick="@{() -> viewModel.onSeeScheduleInWebsite()}"
                    android:paddingStart="@dimen/spacing_small"
                    android:paddingEnd="@dimen/spacing_small"
                    android:text="@string/view_schedule_on_website"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.Cinemais.Body"
                    android:textStyle="bold"
                    />

                <LinearLayout
                    android:id="@+id/cinema_actions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:baselineAligned="false"
                    >

                    <com.diegobezerra.cinemaisapp.widget.CinemaActionView
                        android:id="@+id/tickets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_small"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:onClick="@{() -> viewModel.onTicketsClicked()}"
                        app:caColor="@color/alt_green"
                        app:caIcon="@drawable/ic_attach_money"
                        app:caLabel="@string/label_cinema_tickets"
                        />

                    <com.diegobezerra.cinemaisapp.widget.CinemaActionView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_small"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:onClick="@{() -> viewModel.onLocationClicked()}"
                        app:caColor="@color/cinemais_blue"
                        app:caIcon="@drawable/ic_map"
                        app:caLabel="@string/label_cinema_location"
                        />

                    <com.diegobezerra.cinemaisapp.widget.CinemaActionView
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_small"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:onClick="@{() -> viewModel.onInfoClicked()}"
                        app:caColor="@color/alt_pink"
                        app:caIcon="@drawable/ic_info_outline"
                        app:caLabel="@string/label_cinema_info"
                        />

                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/sessions_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingTop="@dimen/spacing_medium"
                android:paddingEnd="@dimen/spacing_medium"
                android:paddingBottom="@dimen/spacing_tiny"
                app:goneUnless="@{viewModel.isCinemaLayoutVisible}"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/header_sessions"
                    android:textAppearance="@style/TextAppearance.Cinemais.Subhead"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/sessions_cinema_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingStart="@dimen/spacing_medium"
                    android:paddingEnd="@dimen/spacing_xlarge"
                    android:singleLine="true"
                    android:text="@{viewModel.cinema.name}"
                    android:textAppearance="@style/TextAppearance.Cinemais.Body"
                    android:textSize="16sp"
                    />

                <ImageButton
                    android:id="@+id/filter_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="?selectableItemBackgroundBorderless"
                    android:onClick="@{() -> viewModel.onFilterClick()}"
                    android:padding="@dimen/spacing_tiny"
                    android:src="@drawable/ic_filter_list"
                    android:tint="@{viewModel.isFilterEnabled ? @color/filter_active : @color/primary_text}"
                    />

            </FrameLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
</layout>